# notepad

./: CMakeLists.txt  README.md  main.c
include/: console.h  file.h  line.h  page.h  text.h
include/pdcurses/: CMakeLists.txt  curses.h
src/: console.c  file.c  line.c  page.c  text.c
